# darask-code-editor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: AI-DESIGN.md  ARCHITECTURE.md  PHASE1-SPEC.md  PHASE2-SPEC.md  PHASE3A-SPEC.md  ROADMAP.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  secrets.rs
src-tauri/src/acp/: agents_config.rs  manager.rs  mod.rs  protocol.rs
src-tauri/src/commands/: fs.rs  mod.rs
src-tauri/src/providers/: cloudflare.rs  mod.rs  openrouter.rs
src-tauri/src/usage/: claude_code_local.rs  cloudflare_analytics.rs  mod.rs  store.rs
src/components/: ErrorBoundary.tsx
src/components/ai/: AiPanel.tsx
src/components/dialogs/: UnsavedChangesDialog.tsx  dialogs.css
src/components/editor/: EditorPane.tsx  EditorTabs.tsx  WelcomeView.tsx  editor.css
src/components/explorer/: FileExplorer.tsx  FileTreeItem.tsx  explorer.css
src/components/layout/: ActivityBar.tsx  MainArea.tsx  SideBar.tsx  (+1 more)
src/lib/: acp.ts  commands.ts  documentManager.ts  editorLifecycle.ts  fs.ts  keybindings.ts  monacoSetup.ts  platform.ts  tauriEvents.ts
src/state/: acpStore.ts  aiStore.ts  editorStore.ts  notificationStore.ts  providerStore.ts  uiStore.ts  unsavedChangesStore.ts  usageStore.ts  workspaceStore.ts
src/styles/: fonts.css  global.css
src/themes/: dark.ts  index.ts  light.ts  paper.ts  types.ts
src/types/: index.ts
(+18 files in other folders)
