[package]
name = "darask"
version = "0.1.0-beta.2"
description = "Darask Code Editor"
edition = "2021"

[lib]
name = "darask_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Phase3a(PHASE3A-SPEC.md 1.1)
reqwest = { version = "0.13", features = ["json", "stream"] }
rusqlite = { version = "0.40", features = ["bundled"] }
keyring = { version = "4.1", features = ["windows-native-keyring-store"] }
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
sha2 = "0.10"
trash = "5.2"
